# openenv-code-review

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  __init__.py  client.py  inference.py  memory.py  models.py  openenv.yaml  pyproject.toml
outputs/: sample_evaluation.txt
server/: app.py  ast_analyzer.py  code_review_environment.py  tasks.py
static/: index.html
static/css/: style.css
static/js/: api.js  dashboard.js  playground.js
